--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,11 +133,8 @@
                         <h3>Contact Details</h3>
     
                         <p>
-                        Jonathan Doe <br>
-                        1600 Amphitheatre Parkway <br>
-                        Mountain View, CA 94043 US <br>
-                        <a href="tel:+1975432345">+197 543 2345</a> <br>
-                        <a href="mailto:#0">sayhello@ceevee.com</a>
+                        Prouchotte Gouroubaran <br>
+                        <a href="mailto:#0">guruquebec@yahoo.ca</a>
                         </p>
                         
                     </div>
